# QvickyFix

./: CMakeLists.txt  main.cpp
include/: FIXField.h  FIXFieldStore.h  FIXParser.h  FIXSpecManager.h  FIXWriter.h
